# sdl-mandelbrot

./: .gitignore  Cargo.nix  Cargo.toml  LICENSE  Makefile  base.nix  crates-io.list  crates-io.nix  default.nix  shell.nix
src/: compute.rs  image.rs  main.c  main.rs  projection.rs
